--- a/PortableAudioPlayerAssistant.csproj
+++ b/PortableAudioPlayerAssistant.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Core\" />
+    <Folder Include="Style\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Context\Library\MediaStorageSelectorView.xaml">
